Updated '_sass/_header.sass' via CloudCannon

--- a/_sass/_header.sass
+++ b/_sass/_header.sass
@@ -2,6 +2,7 @@
 	background-position: center
 	background-size: cover
 	padding-top: $nav-height + 5rem
+	background-blend-mode: multiply
 #hero
 	background-position: center
 	background-size: cover
